discussion/kv_engine/184871/184871_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge branch 'couchbase/neo' into 'couchbase/master'

* commit '2ffe5aeb9':
  MB-54848: Log correct username on auth failures

Conflicts:

tests/testapp/testapp_environment.cc

Change-Id: I2ae1ce5ca094699b8c1c3d581a7f5c89fae03e8a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-12 11:49:59.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-12 12:17:44.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22435/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_environment.cc:616:30: error: no member named "filesystem" in namespace "boost"; did you mean "std::filesystem"? [clang-diagnostic-error]
        for (const auto& p : boost::filesystem::directory_iterator(log_dir)) {
                             ^~~~~~~~~~~~~~~~~
                             std::filesystem
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/fs_ops.h:41:11: note: "std::filesystem" declared here
namespace filesystem
          ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22435/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_environment.cc:616:30:
error: no member named "filesystem" in namespace "boost"; did you mean "std::filesystem"? [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22435/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51796/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp/testapp_environment.cc(616): error C2039: "filesystem": is not a member of "boost" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51796/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24016/ : FAILURE

Compile error at [2023-01-12T12:02:57.537Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/tests/testapp/testapp_environment.cc:616:30:
error: no member named "filesystem" in namespace "boost"; did you mean "std::filesystem"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24016/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12243/ : FAILURE

Compile error at [2023-01-12T11:58:00.518Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp/testapp_environment.cc:616:37:
error: ?boost::filesystem? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12243/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1202/ : FAILURE

Compile error at [2023-01-12T12:01:07.962Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/tests/testapp/testapp_environment.cc:616:37:
error: ?boost::filesystem? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1202/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12157/ : FAILURE

Compile error at [2023-01-12T12:07:59.455Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp/testapp_environment.cc:616:30:
error: no member named "filesystem" in namespace "boost"; did you mean "std::filesystem"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12157/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24482/ : FAILURE

Compile error at [2023-01-12T12:04:29.450Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp/testapp_environment.cc:616:37:
error: ?boost::filesystem? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24482/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24906/ : FAILURE

Compile error at [2023-01-12T12:08:16.701Z] ../kv_engine/tests/testapp/testapp_environment.cc:616:37:
error: ?boost::filesystem? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24906/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25772/ : FAILURE

Compile error at [2023-01-12T12:04:35.174Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp/testapp_environment.cc:616:30:
error: no member named "filesystem" in namespace "boost"; did you mean "std::filesystem"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25772/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32902/ : FAILURE

Compile error at [2023-01-12T12:08:39.101Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp/testapp_environment.cc:616:30:
error: no member named "filesystem" in namespace "boost"; did you mean "std::filesystem"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32902/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22105/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43472/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
